# data-science-portfolio

./: .gitignore  README.md  pyproject.toml
analise_exploracao_dados/01_obesity_levels/notebook/: analise_exploratoria.ipynb
analise_exploracao_dados/obesity-levels/notebook/: analise-exploratoria.ipynb
analise_exploracao_dados/obesity-levels/notebook/.ipynb_checkpoints/: analise-exploratoria-checkpoint.ipynb
web_scraping/01_campeonado_brasileiro_sofascore/: 01_tabela_brasileirao.ipynb  02_estatisticas_times.ipynb
web_scraping/01_campeonado_brasileiro_sofascore/database/: brasilstatsdb.db.wal
