[tool.poetry]
name = "qa-data-science"
version = "0.1.0"
description = ""
authors = ["guilherme-cavalheri <guilhermecc1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
duckdb = "^0.10.2"
plotly = "^5.22.0"
nbformat = "5.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
